laptop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: laptop-deploy
  labels: 
    app: laptop
spec:
  template:
    metadata: 
      labels:
        app: laptop
    spec:
      containers:
        - name: laptop-containers
          image: prathamesh5145/laptop:latest
          ports:
            - contianerPort: 80
  replicas: 3
  selector:
    matchLabels:
      app: laptop
  strategy:
    type: RollingUpdate
...
---
apiVersion: v1
kind: Service
metadata: 
  name : laptop-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP 
  selector:
    app: laptop
...
