ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: 
  defaultBackend: 
    service:
      name: mobile-svc
      port:
        number: 80
  rules:
    - host: ""
      http:
        paths:
        - path: /mobile
          pathType: Prefix
          backend:
            service:
              name: mobile-svc
              port:
                number: 80
        - path: /laptop
          pathType: Prifix
          backend:
            service:
              name: laptop-svc
              port: 
                number: 80
